<?xml version="1.0"?>
<package format="2">
  <name>arf_demo</name>
  <version>0.1.0</version>
  <description>The arf_demo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jeroendm@todo.todo">jeroendm</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/arf_demo</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author >Jeroen De Maeyer</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>arf_moveit_wrapper</build_depend>
  <build_depend>arf_path</build_depend>
  <build_depend>arf_trajectory</build_depend>
  <build_depend>arf_planning</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>arf_moveit_wrapper</build_export_depend>
  <build_export_depend>arf_graph</build_export_depend>
  <build_export_depend>arf_trajectory</build_export_depend>
  <build_export_depend>arf_planning</build_export_depend>
  <build_export_depend>moveit_visual_tools</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>arf_moveit_wrapper</exec_depend>
  <exec_depend>arf_graph</exec_depend>
  <exec_depend>arf_trajectory</exec_depend>
  <exec_depend>arf_planning</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
